--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,7 @@ spring.datasource.password=11223344
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
 
-spring.liquibase.change-log=db/changelog/db.changelog-master.xml
+
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
