--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:2346/shop_test_db
-spring.datasource.username=postgrest
-spring.datasource.password=postgrest
+spring.datasource.url=jdbc:postgresql://localhost:2346/lab-10-test
+spring.datasource.username=lab10
+spring.datasource.password=Dancho2005
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=none
