--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8000
+server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:2345/Lab9
-spring.datasource.username=lab-9
-spring.datasource.password=11223344
+spring.datasource.url=jdbc:postgresql://localhost:2345/lab-10
+spring.datasource.username=lab10
+spring.datasource.password=Dancho2005
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=none
